@@ -1,3 +1,8 @@
+2011-03-17  Bjørn Mork  <bjorn@mork.no>
+
+	* nnimap.el (nnimap-fetch-inbox): Don't download bodies on ver4-capable
+	servers.
+
 2011-03-16  Julien Danjou  <julien@danjou.info>
 
 	* mm-uu.el (mm-uu-dissect-text-parts): Only dissect handle that are
